force-app/main/default/objects/Member__c/Member__c.object-meta.xml
<CustomObject>
    <label>メンバー</label>
    <nameField>
        <displayFormat>メンバーNo{0000}</displayFormat>
        <label>管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>