force-app/main/default/objects/Member__c/fields/WorkId__c.field-meta.xml
<CustomField>
    <fullName>WorkId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連作業</label>
    <referenceTo>Work__c</referenceTo>
    <relationshipLabel>メンバー</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>