force-app/main/default/objects/Member__c/fields/WorkingDate__c.field-meta.xml
<CustomField>
    <fullName>WorkingDate__c</fullName>
    <label>作業日</label>
    <type>Date</type>
</CustomField>